<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="HMI" Id="{631d78cb-73d2-40fd-ac8b-c4cc47a6d8ff}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	fManualCylinderPositionReference : LREAL;
	sPistonEndStopMessage : STRING;
	fCylinderPositon : LREAL := 0.0;
	fCylinderVelocity : LREAL := 0.0;
	fBoomAngle : LREAL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>