<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="Parameters" Id="{3db240b4-cea9-499c-90bf-c853e658de87}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	fCyclicTime : REAL := 0.01;
	bSimulationRunning : BOOL := FALSE;
	stPistonRange : ST_PistonRange;
	stPistonOutOfBounds : ST_PistonOutOfBounds;
	stCraneKinematics : ST_CraneKinematics;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>