<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="CraneSimulation" Id="{9db64730-0769-4523-9dc9-b42b5865fac6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM CraneSimulation
VAR
	fCyclicTime : LREAL := 0.01;
	
	fbCraneStatus : FB_CraneStatus;
	fbCraneMode : FB_CraneMode;
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Crane status state machine
fbCraneStatus(	bPower := Inputs.bOnSelector,
		 		bStart := Inputs.bStartButton, 
				bStop := Inputs.bStopButton, 
				bRunning := Parameters.stStateVariables.bRunning, 
				bError := Parameters.stStateVariables.bError,
				eCraneStatus => Outputs.eCraneStatus);

// Crane mode state machine
IF Parameters.stStateVariables.bRunning THEN
	fbCraneMode( 	bRunning := Parameters.stStateVariables.bRunning,
					bMode := Inputs.bAutoSelector,
					eCraneMode => Outputs.eCraneMode);
END_IF
	
// Calculate boom angle for visualization of simulation
IF HMI.fCylinderPositon <= Parameters.stPistonRange.fPistonPosMax AND HMI.fCylinderPositon >= Parameters.stPistonRange.fPistonPosMin THEN
	HMI.fBoomAngle := F_BoomAngle(	fCylinderX := HMI.fCylinderPositon);
END_IF
	
// Simulation timer			
IF Parameters.stStateVariables.bRunning THEN
	Parameters.stStateVariables.fTime := Parameters.stStateVariables.fTime + fCyclicTime;
ELSE
	Parameters.stStateVariables.fTime := 0.0;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="CraneSimulation">
      <LineId Id="273" Count="0" />
      <LineId Id="203" Count="0" />
      <LineId Id="217" Count="3" />
      <LineId Id="242" Count="0" />
      <LineId Id="275" Count="0" />
      <LineId Id="262" Count="0" />
      <LineId Id="222" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="221" Count="0" />
      <LineId Id="243" Count="0" />
      <LineId Id="263" Count="0" />
      <LineId Id="259" Count="0" />
      <LineId Id="274" Count="0" />
      <LineId Id="284" Count="0" />
      <LineId Id="261" Count="0" />
      <LineId Id="286" Count="1" />
      <LineId Id="224" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="8" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>